--- a/projet_fixed_ip_address/main.ipynb
+++ b/projet_fixed_ip_address/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,23 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['a', 'b', 'c', 'd']\n",
-      "{'a': '10', 'b': '20', 'c': '30', 'd': '20'}\n",
-      "{'a': '11', 'b': '22', 'c': '33', 'd': '22'}\n",
-      "[{'a': '10', 'b': '20', 'c': '30', 'd': '20'}, {'a': '11', 'b': '22', 'c': '33', 'd': '22'}]\n",
-      "QWERTY\n",
-      "['A', 'B', 'C', 'D']\n",
-      "<function c at 0x11626fd00>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "l = ['a','b','c','d']\n",
     "val = ['10','20','30','20']\n",
@@ -79,6 +65,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "val = None\n",
+    "result = (val if val else None)\n",
+    "print(result)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -96,7 +101,7 @@
     "    inventory={\n",
     "        \"plugin\": \"NetBoxInventory2\",\n",
     "        \"options\": {\n",
-    "            \"nb_url\": \"http://10.30.1.101:8000\",\n",
+    "            \"nb_url\": \"http://10.30.1.226:8000\",\n",
     "            \"nb_token\": \"dc5b766afda60e647a9fcc384c736a9689da8618\",\n",
     "            \"group_file\": \"./inventory/groups.yml\",\n",
     "            \"defaults_file\": \"./inventory/defaults.yml\",\n",
