--- a/projet_fixed_ip_address/nb_sw_int_api.ipynb
+++ b/projet_fixed_ip_address/nb_sw_int_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
       " * Running on all addresses (0.0.0.0)\n",
       " * Running on http://127.0.0.1:8080\n",
-      " * Running on http://10.96.5.16:8080\n",
+      " * Running on http://10.68.5.12:8080\n",
       "\u001b[0mPress CTRL+C to quit\u001b[0m\n",
       "\u001b[0m"
      ]
@@ -783,16 +783,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CREATED cable ID #335 between ['SW-PLGN-1', 'T-IvanovII']...\u001b[0m\n",
-      "\u001b[0mConnection between access_switch and user_device, switch access interface ID: 133...\u001b[0m\n",
-      "\u001b[0mInterface Ethernet0/0 was turned off before\u001b[0m\n"
+      "UPDATED Ethernet 0...\u001b[0m\n",
+      "\u001b[0mINFORMATIONAL: No data for updated Ethernet 0.\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10.30.1.226 - - [07/Apr/2023 09:00:47] \"\u001b[0mPOST /api/cable_change HTTP/1.1\u001b[0m\" 204 -\n",
+      "10.30.1.226 - - [16/Apr/2023 10:03:43] \"\u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0m"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "POST /api/int_update HTTP/1.1\u001b[0m\" 204 -\n",
       "\u001b[0m"
      ]
     },
@@ -800,16 +813,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0mDELETED cable ID #335 between ['SW-PLGN-1', 'T-IvanovII']...\u001b[0m\n",
-      "\u001b[0mConnection between access_switch and user_device, switch access interface ID: 133...\u001b[0m\n",
-      "\u001b[0mInterface Ethernet0/0 was turned off before\u001b[0m\n"
+      "UPDATED Ethernet 0...\u001b[0m\n",
+      "\u001b[0m{}\u001b[0m\n",
+      "\u001b[0m"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10.30.1.226 - - [07/Apr/2023 09:01:11] \"\u001b[0mPOST /api/cable_change HTTP/1.1\u001b[0m\" 204 -\n",
+      "10.30.1.226 - - [16/Apr/2023 10:04:00] \"\u001b[0mPOST /api/int_update HTTP/1.1\u001b[0m\" 204 -\n",
       "\u001b[0m"
      ]
     },
@@ -817,93 +830,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0mCREATED cable ID #336 between ['SW-PLGN-1', 'T-IvanovII']...\u001b[0m\n",
-      "\u001b[0mConnection between access_switch and user_device, switch access interface ID: 135...\u001b[0m\n",
+      "UPDATED Ethernet0/2...\u001b[0m\n",
       "\u001b[0mFilling in the template...\u001b[0m\n",
-      "\u001b[0mCreate interface Ethernet0/2 config...\u001b[0m\n",
-      "\u001b[0micmp ping...\u001b[0m\n",
-      "\u001b[0m['10.30.1.105'] is available...\u001b[0m\n",
-      "\u001b[0mAttempting to connect 1...\u001b[0m\n",
-      "\u001b[0mConnection state is connected...\u001b[0m\n",
-      "\u001b[0mFind Ethernet0/2 for device SW-PLGN-1...\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[36mConfiguration interface.../*****************************************************\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[34m* SW-PLGN-1 ** changed : True **************************************************\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[33mvvvv Configuration interface.../ ** changed : True vvvvvvvvvvvvvvvvvvvvvvvvvvvvv INFO\u001b[0m\n",
-      "\u001b[0mconfigure terminal\n",
-      "Enter configuration commands, one per line.  End with CNTL/Z.\n",
-      "Switch(config)#interface Ethernet0/2\n",
-      "Switch(config-if)#    description T-SIDOROV\n",
-      "Switch(config-if)#    switchport access vlan 310\n",
-      "Switch(config-if)#    switchport mode access\n",
-      "Switch(config-if)#    no shutdown\n",
-      "Switch(config-if)#end\n",
-      "Switch#\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[33m^^^^ END Configuration interface.../ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\u001b[0m\n",
-      "\u001b[0mSUCCESS: All operations are performed\u001b[0m\n",
-      "\u001b[0mNone\u001b[0m\n",
-      "\u001b[0mConnection state is closed.\u001b[0m\n"
+      "\u001b[0mUpdate interface Ethernet0/2 config...\u001b[0m\n",
+      "\u001b[0mINFORMATIONAL: No data for update Ethernet0/2.\u001b[0m\n",
+      "\u001b[0mNone\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10.30.1.226 - - [07/Apr/2023 09:03:24] \""
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0m"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0mPOST /api/cable_change HTTP/1.1\u001b[0m\" 204 -\n",
-      "\u001b[0m"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DELETED cable ID #336 between ['SW-PLGN-1', 'T-IvanovII']...\u001b[0m\n",
-      "\u001b[0mConnection between access_switch and user_device, switch access interface ID: 135...\u001b[0m\n",
-      "\u001b[0mFilling in the template...\u001b[0m\n",
-      "\u001b[0mDelete interface Ethernet0/2 config...\u001b[0m\n",
-      "\u001b[0micmp ping...\u001b[0m\n",
-      "\u001b[0m['10.30.1.105'] is available...\u001b[0m\n",
-      "\u001b[0mAttempting to connect 1...\u001b[0m\n",
-      "\u001b[0mConnection state is connected...\u001b[0m\n",
-      "\u001b[0mFind Ethernet0/2 for device SW-PLGN-1...\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[36mConfiguration interface.../*****************************************************\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[34m* SW-PLGN-1 ** changed : True **************************************************\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[33mvvvv Configuration interface.../ ** changed : True vvvvvvvvvvvvvvvvvvvvvvvvvvvvv INFO\u001b[0m\n",
-      "\u001b[0mconfigure terminal\n",
-      "Enter configuration commands, one per line.  End with CNTL/Z.\n",
-      "Switch(config)#default interface Ethernet0/2\n",
-      "Interface Ethernet0/2 set to default configuration\n",
-      "Switch(config)#interface Ethernet0/2\n",
-      "Switch(config-if)#    description DEFAULT\n",
-      "Switch(config-if)#    switchport access vlan 99\n",
-      "Switch(config-if)#    switchport mode access\n",
-      "Switch(config-if)#    no shutdown\n",
-      "Switch(config-if)#end\n",
-      "Switch#\u001b[0m\n",
-      "\u001b[0m\u001b[1m\u001b[33m^^^^ END Configuration interface.../ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\u001b[0m\n",
-      "\u001b[0mSUCCESS: All operations are performed\u001b[0m\n",
-      "\u001b[0mNone\u001b[0m\n",
-      "\u001b[0mConnection state is closed.\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "10.30.1.226 - - [07/Apr/2023 09:03:49] \"\u001b[0mPOST /api/cable_change HTTP/1.1\u001b[0m\" 204 -\n",
+      "10.30.1.226 - - [16/Apr/2023 10:04:01] \"\u001b[0mPOST /api/int_update HTTP/1.1\u001b[0m\" 204 -\n",
       "\u001b[0m"
      ]
     },
@@ -954,7 +892,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -968,12 +906,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0a54084e6b208ee8d1ce3989ffc20924477a5f55f5a43e22e699a6741623861e"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
