--- a/projet_fixed_ip_address/nb_sw_int_api.ipynb
+++ b/projet_fixed_ip_address/nb_sw_int_api.ipynb
@@ -755,101 +755,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * Serving Flask app '__main__'\n",
-      "\u001b[0m * Debug mode: off\n",
-      "\u001b[0m"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
-      " * Running on all addresses (0.0.0.0)\n",
-      " * Running on http://127.0.0.1:8080\n",
-      " * Running on http://10.68.5.12:8080\n",
-      "\u001b[0mPress CTRL+C to quit\u001b[0m\n",
-      "\u001b[0m"
+      "WARNING: Couldn't create 'pydhcpdparser.parsetab'. [Errno 2] No such file or directory: '/tmp\\\\parsetab.py'\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UPDATED Ethernet 0...\u001b[0m\n",
-      "\u001b[0mINFORMATIONAL: No data for updated Ethernet 0.\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "10.30.1.226 - - [16/Apr/2023 10:03:43] \"\u001b[0m"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0m"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "POST /api/int_update HTTP/1.1\u001b[0m\" 204 -\n",
-      "\u001b[0m"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UPDATED Ethernet 0...\u001b[0m\n",
-      "\u001b[0m{}\u001b[0m\n",
-      "\u001b[0m"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "10.30.1.226 - - [16/Apr/2023 10:04:00] \"\u001b[0mPOST /api/int_update HTTP/1.1\u001b[0m\" 204 -\n",
-      "\u001b[0m"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UPDATED Ethernet0/2...\u001b[0m\n",
-      "\u001b[0mFilling in the template...\u001b[0m\n",
-      "\u001b[0mUpdate interface Ethernet0/2 config...\u001b[0m\n",
-      "\u001b[0mINFORMATIONAL: No data for update Ethernet0/2.\u001b[0m\n",
-      "\u001b[0mNone\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "10.30.1.226 - - [16/Apr/2023 10:04:01] \"\u001b[0mPOST /api/int_update HTTP/1.1\u001b[0m\" 204 -\n",
-      "\u001b[0m"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0m"
+     "ename": "NameError",
+     "evalue": "name 'mng_cable' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12692\\840282311.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     20\u001b[0m app.add_url_rule(\"/api/cable_change\",\n\u001b[0;32m     21\u001b[0m                 \u001b[0mmethods\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'POST'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m                 view_func=mng_cable)\n\u001b[0m\u001b[0;32m     23\u001b[0m \"\"\"\n\u001b[0;32m     24\u001b[0m \u001b[0mWebhook\u001b[0m \u001b[0mPOST\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'mng_cable' is not defined"
      ]
     }
    ],
@@ -906,7 +830,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.7.8"
   },
   "orig_nbformat": 4,
   "vscode": {
