--- a/projet_fixed_ip_address/test.ipynb
+++ b/projet_fixed_ip_address/test.ipynb
@@ -2,41 +2,73 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from flask import request, Response\n",
     "from flask import Flask\n",
     "import pprint\n",
-    "from config import netbox_api"
+    "from config import netbox_api\n",
+    "from types import SimpleNamespace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nornir import InitNornir\n",
+    "from credentials import(netbox_url,\n",
+    "                        netbox_token,\n",
+    "                        device_username,\n",
+    "                        device_password)\n",
+    "from nornir_napalm.plugins.tasks import napalm_get\n",
+    "def create_nornir_session():\n",
+    "    \"\"\" \n",
+    "    Инициализируем nornir, но для \"hosts\" используем данные из netbox\n",
+    "    :return: nr_session\n",
+    "    \"\"\"\n",
+    "    nr_session = InitNornir(\n",
+    "        inventory={\n",
+    "            \"plugin\": \"NetBoxInventory2\",\n",
+    "            \"options\": {\n",
+    "                \"nb_url\": netbox_url,\n",
+    "                \"nb_token\": netbox_token,\n",
+    "                \"group_file\": \"./inventory/groups.yml\",\n",
+    "                \"defaults_file\": \"./inventory/defaults.yml\",\n",
+    "            },\n",
+    "        },\n",
+    "    )\n",
+    "    return nr_session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def test():\n",
     "    # Получаем данные через flask от webhook netbox:\n",
-    "    #event = request.json[\"event\"] # type: ignore\n",
     "    mng_int_id = request.json['data']['id'] # type: ignore\n",
-    "    #prechange = request.json['snapshots']['prechange'] # type: ignore\n",
-    "    #postchange = request.json['snapshots']['postchange'] # type: ignore\n",
     "    get_device_interface = netbox_api.dcim.interfaces.get(mng_int_id)\n",
+    "    device_id = get_device_interface.device.id # type: ignore\n",
+    "    d = dict(netbox_api.dcim.devices.get(device_id).config_context) # type: ignore\n",
+    "    pprint.pprint(d)\n",
+    "    config_context = SimpleNamespace(**d)\n",
+    "    #print(key for key, value in config_context.items())\n",
+    "    #print(config_context.device_username)\n",
+    "\n",
+    "    nr = create_nornir_session()\n",
+    "\n",
+    "    sw = nr.filter(hostname = '10.30.1.105') # производим отбор по конкретному хосту\n",
+    "    sw.inventory.hosts['SW-PLGN-1'].username = config_context.device_username\n",
+    "    sw.inventory.hosts['SW-PLGN-1'].password = config_context.device_password\n",
+    "    get_int = sw.run(task=napalm_get, getters=['get_interfaces'])\n",
+    "    print(get_int)\n",
     "    \n",
-    "    #pprint.pprint(request.json)\n",
-    "    local_context = get_device_interface.device.local_context_data\n",
-    "    config_contexts = netbox_api.extras.config_contexts.all()\n",
-    "    #print(type(config_contexts))\n",
-    "    print([config_contexts])\n",
-    "    # Запрашиваем данные через netbox_api:\n",
-    "    \"\"\" get_device_interface = netbox_api.dcim.interfaces.get(mng_int_id)\n",
-    "    local_context = get_device_interface.device.local_context_data\n",
-    "    print(local_context) \"\"\"\n",
-    "\n",
-    "\n",
     "    return Response(status=204)"
    ]
   },
