--- a/projet_fixed_ip_address/test.ipynb
+++ b/projet_fixed_ip_address/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +70,64 @@
     "    print(get_int)\n",
     "    \n",
     "    return Response(status=204)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ethernet 0\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'items'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_14552\\2845727869.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;31m#print('Clear {} netbox interface config'.format(device_intf))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[0mnetbox_api\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mipam\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mip_addresses\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mchanges\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m \u001b[0mdevice\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m\"primary_ip\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mget_available_ips\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     30\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchanges\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python37\\site-packages\\pynetbox\\core\\response.py\u001b[0m in \u001b[0;36mupdate\u001b[1;34m(self, data)\u001b[0m\n\u001b[0;32m    591\u001b[0m         \"\"\"\n\u001b[0;32m    592\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 593\u001b[1;33m         \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    594\u001b[0m             \u001b[0msetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    595\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'items'"
+     ]
+    }
+   ],
+   "source": [
+    "# api/ipam/prefixes/39/available-ips/\n",
+    "get_device_interface = netbox_api.dcim.interfaces.get(764)\n",
+    "print(get_device_interface)\n",
+    "intf = get_device_interface\n",
+    "if intf.untagged_vlan and intf.mac_address:\n",
+    "    vlan_id = intf.untagged_vlan.vid\n",
+    "    \n",
+    "    device = netbox_api.dcim.devices.get(intf.device.id)\n",
+    "   \n",
+    "    if device.primary_ip == False:\n",
+    "        \n",
+    "        get_available_ips = netbox_api.ipam.prefixes.get(vlan_vid = vlan_id).available_ips.list()\n",
+    "        \n",
+    "        pprint.pprint(get_available_ips[0])\n",
+    "\n",
+    "    \n",
+    "changes = dict()\n",
+    "#changes = dict.fromkeys(config_context.interface, None)\n",
+    "#changes['id'] = 117\n",
+    "changes['address'] = str(get_available_ips[0])\n",
+    "changes['status'] = 'dhcp'\n",
+    "changes['assigned_object_type'] = 'dcim.interface'\n",
+    "changes['assigned_object_id'] = intf.id\n",
+    "changes['dns_name'] = str(device.name)\n",
+    "changes['description'] = str(device.name)\n",
+    "#netbox_api.dcim.interfaces.update([changes])\n",
+    "#print('Clear {} netbox interface config'.format(device_intf))\n",
+    "netbox_api.ipam.ip_addresses.create([changes])\n",
+    "device.update([{\"primary_ip\":str(get_available_ips[0])}])\n",
+    "print(changes)"
    ]
   },
   {
